add reflection; add tests